<resources>
    <string name="app_name">C-Verde</string>
    <string name="getstartbtn">\n</string>
    <string name="Email_Uname">Email/Username</string>
    <string name="getstart">Click anywhere to start!</string>
    <string name="Password">Password</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="login">Login</string>
    <string name="reg">New to C-Verde? SignUp</string>
    <string name="logo">\n</string>
    <string name="image_input">Appear</string>
    <string name="vid">Videos</string>
    <string name="trivia">Trivia</string>
    <string name="trivia1">Carbon Footprint</string>
    <string name="trivia2">CO₂ Emissions</string>
    <string name="home">Home</string>
    <string name="welcomee">Hey there, dive into epic videos, \nuncover cool trivia, \nand crush your goals to \nscore big points today!</string>
    <string name="trivia3">"Carbon-Negative \nNation "</string>
    <string name="trivia4">The Power of \nPlant-Based \nEating</string>
    <string name="username">Username</string>
    <string name="closestory">\n</string>
    <string name="logo_description">\n</string>
    <string name="instrucpreassess">This pre-assessment checks your prior knowledge and <b><u>won’t affect your final score.</u></b> Click \"Start\" when ready.</string>
    <string name="start">Start</string>
    <string name="instruc">INSTRUCTIONS:</string>
    <string name="timer1">00:00</string>
    <string name="timee">\n</string>
    <string name="guideRB">Choose 1 to continue.</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="WD">Well Done!</string>
    <string name="pre1scoress">Your score is:</string>
    <string name="pre1score">5/5 points</string>
    <string name="prenote">Great job! Keep applying what you’ve learned for a better future.</string>
    <string name="whatiscarbon">What is Carbon Footprint?</string>
    <string name="effectcarbon">Effects of Carbon Footprint</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="student_id">Student Number</string>
    <string name="Confirmpassword">Confirm Password</string>
    <string name="I_agree_to_the_Terms_and_Conditions">I Agree to the Terms And Conditions</string>
    <string name="terms_conditions_description">I Agree to the Terms And Condition</string>
    <string name="SignUp">SIGNUP</string>
    <string name="Do_have_an_account_Login"><b><i>Already have an account? Login</i></b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instrucPostAssess">After watching the educational video on carbon emissions, please complete the post-assessment quiz to see if you\'ve gained knowledge, with <b><u><i>the points you earn directly reflecting your understanding.</i></u></b></string>
    <string name="preqeus1">What is your current level of knowledge about your carbon footprint?</string>
    <string name="preQ11a">Renewable energy</string>
    <string name="preQ11b"><![CDATA[Carbon dioxide & Methane Gases]]></string>
    <string name="preQ11c">Water pollution</string>
    <string name="preQ11d">Deforestation</string>
    <string name="preqeus2">Which greenhouse gas is commonly associated with climate change?</string>
    <string name="preQ12a">Oxygen</string>
    <string name="preQ12b">Nitrogen</string>
    <string name="preQ12c">Carbon dioxide</string>
    <string name="preQ12d">Helium</string>
    <string name="preqeus13">Besides carbon dioxide, which other greenhouse gas was mentioned?</string>
    <string name="preQ13a">Helium</string>
    <string name="preQ13b">Methane</string>
    <string name="preQ13c">Sulfur</string>
    <string name="preQ13d">Neon</string>
    <string name="preqeus14">Why are greenhouse gases a concern for the planet?</string>
    <string name="preQ14a">They clean the air</string>
    <string name="preQ14b">They contribute to global warming</string>
    <string name="preQ14c">They help plants grow faster</string>
    <string name="preQ14d">They reduce water pollution</string>
    <string name="preqeus15">What action does the video encourage viewers to take?</string>
    <string name="preQ15a">Ignore climate change</string>
    <string name="preQ15b">Stop recycling</string>
    <string name="preQ15c">Increase carbon emissions</string>
    <string name="preQ15d">Take action today</string>
    <string name="postqeus1">Which of these is <u> NOT</u> a greenhouse gas?</string>
    <string name="postqeus2">What is the main message of the video?</string>
    <string name="postQ12a">Promoting fossil fuels</string>
    <string name="postQ12b">Understanding and addressing greenhouse gas emissions</string>
    <string name="postQ12c">Encouraging space exploration</string>
    <string name="postQ12d">Advertising new technology</string>
    <string name="postqeus13">Which human activity contributes most to carbon dioxide emissions?</string>
    <string name="postQ13a">Burning fossil fuels</string>
    <string name="postQ13b">Planting trees</string>
    <string name="postQ13c">Recycling plastic</string>
    <string name="postQ13d">Riding bicycles</string>
    <string name="postqeus15">Which of these statements is true?</string>
    <string name="postQ15a">Methane is not a greenhouse gas</string>
    <string name="postQ15b">Carbon dioxide levels have no impact on climate</string>
    <string name="postQ15c">Greenhouse gases contribute to global warming</string>
    <string name="postQ15d">Climate change is caused by natural factors only</string>
    <string name="postqeus14">Which of these is a consequence of increased greenhouse gases?</string>
    <string name="postQ14a">Better air quality</string>
    <string name="postQ14b">Global warming</string>
    <string name="postQ14c">Reduced ocean levels</string>
    <string name="postQ14d">Increased wildlife populations</string>
    <string name="preQ21a">Planting more trees</string>
    <string name="preQ21b">Burning fossil fuels</string>
    <string name="preQ21c">Using renewable energy</string>
    <string name="preQ21d">Recycling waste</string>
    <string name="preqeus21">" What is the primary cause of an increased carbon footprint?"</string>
    <string-array name="transport_modes">
        <item>Car</item>
        <item>Bus</item>
        <item>Motorcycle</item>
        <item>Jeepney</item>
        <item>Truck</item>
    </string-array>
    <string name="profile">Profile</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="first_name">First Name</string>
    <string name="email">name@gmail.com</string>
    <string name="birth_date">DD-MM-YYYY</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="others">Others</string>
    <string name="save_changes">Save Changes</string>
    <string name="nothree">C-Verde collects and processes personal information, such as your daily activities, energy usage, and travel habits, to calculate your carbon footprint. The information is stored securely and used solely for the purpose of improving your experience with the application.  Your data will not be shared with third parties without your consent, except as required by law.\n\nWe take reasonable steps to ensure your data is protected, but no system is completely secure. By using the app, you acknowledge the risks of data breaches.</string>
    <string name="termsandcon"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="channel_name">Motivational Notifications</string>
    <string name="channel_description">Channel for motivational notifications and facts</string>
    <string name="hey">Hey There! I am Ceven, Let me show you around!♡</string>
    <string name="diduknow">Did you know?</string>
    <string name="welcome2"><b><u>Everything we do leaves a carbon footprint</u></b> — sending an email, eating a meal, or streaming a video all contribute to CO₂ emissions. Even a single cheeseburger can produce CO₂!</string>
    <string name="back">BACK</string>
    <string name="welcome3">Cars release carbon dioxide, a greenhouse gas that contributes to climate change. Choosing to walk, bike, or take public transport helps reduce our carbon footprint</string>
    <string name="transpo">Transportation</string>
    <string name="welcome4">The food we eat also impacts the environment. Locally grown and plant-based foods have a lower carbon footprint compared to processed and imported goods.</string>
    <string name="food">Food</string>
    <string name="heard">Have you\n heard?</string>
    <string name="welcome5">We can reduce our carbon footprint by using public transport, saving energy, reducing waste, choosing sustainable food, and planting trees.</string>
    <string name="user">nnnn</string>
    <string name="seeall"><u>See All</u></string>
    <string name="ecorookiepic">\n</string>
    <string name="badge1">\n</string>
    <string name="EcoRookie">ECO ROOKIE ❅</string>
    <string name="EcoRookieDesc">Awarded at 100 points, marking the start of your eco-friendly journey.</string>
    <string name="badge2de">\n</string>
    <string name="EcoProtec">ECO PROTECTOR ♡</string>
    <string name="delpass">Delete Password</string>
    <string name="DeletePass">Delete Password</string>
    <string name="delacc">Delete Account</string>
    <string name="aboutus">About Us</string>
    <string name="editprof">Edit Profile</string>
    <string name="delpic">\n</string>
    <string name="preqeus22">How does a high carbon footprint contribute to climate change?</string>
    <string name="preQ22a">It reduces air pollution</string>
    <string name="preQ22b">It increases greenhouse gases in the atmosphere</string>
    <string name="preQ22c">It cools down the Earth\'s temperature</string>
    <string name="preQ22d">It helps plants grow faster</string>
    <string name="preqeus23">Which of the following health issues is linked to high carbon emissions?</string>
    <string name="preQ23a">Asthma and lung diseases</string>
    <string name="preQ23b">Common cold</string>
    <string name="preQ23c">Broken bones</string>
    <string name="preQ23d">Increased eyesight problems</string>
    <string name="preqeus24">What happens to sea levels when carbon footprints increase?</string>
    <string name="preQ24a">They stay the same</string>
    <string name="preQ24b">They decrease</string>
    <string name="preQ24c">They rise due to melting ice caps</string>
    <string name="preQ24d">They freeze over</string>
    <string name="preqeus25">Which sector is a major contributor to carbon footprints?</string>
    <string name="preQ25d">All of the above</string>
    <string name="preQ25c">Industry</string>
    <string name="preQ25b">Transportation</string>
    <string name="preQ25a">Agriculture</string>
    <string name="default_web_client_id" />
    <string name="pic">\n</string>
    <string name="dlcert">Download as Image</string>
    <string name="dlcert1">Download as PDF</string>
    <string name="certsInst">Please choose <u>\"Download as PDF\" or \"Download as Image\"</u> now. Once you return to the homepage, you won\'t be able to download your certificate again.</string>
    <string name="postqeus23">Which of the following statements is true about the relationship between climate change and extreme weather?</string>
    <string name="postQ23d">Climate change decreases the occurrence of hurricanes and wildfires</string>
    <string name="postQ23c">Climate change only causes minor weather variations</string>
    <string name="postQ23b">It leads to more extreme weather events like hurricanes and wildfires</string>
    <string name="postQ23a">It does not influence weather patterns.</string>
</resources>