<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/prebg1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="1sp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/logo_description"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/cverdee" />

        <TextView
            android:id="@+id/postinstruc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/instruc"
            android:textColor="@color/WBlue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- Motivational Text -->
        <TextView
            android:id="@+id/motivationalText"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/postinstruc1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/instrucPostAssess"
            android:textColor="@color/WBlue"
            android:textSize="19sp" />

        <Button
            android:id="@+id/postbtnstart2"
            android:layout_width="202dp"
            android:layout_height="63dp"
            android:layout_below="@id/motivationalText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            style="@style/assessbtn"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="20sp"
            android:textColor="@color/BlckGreen"
            android:text="@string/start" />

    </RelativeLayout>

</ScrollView>
